# ticketq-be-techincal-test

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  req.md  requirements.txt  setup_db.py  test_api.py  test_api_auth.py
app/: __init__.py  config.py
app/controllers/: __init__.py  auth_controller.py  ticket_controller.py  user_controller.py
app/docs/swagger/tickets/: create_ticket.yml  delete_ticket.yml  get_ticket.yml  get_tickets.yml  update_ticket.yml
app/models/: __init__.py  ticket.py  user.py
app/routes/: __init__.py  auth_routes.py  ticket_routes.py  user_routes.py
app/schemas/: __init__.py  ticket_schemas.py  user_schemas.py
app/services/: __init__.py  ticket_service.py  user_service.py
app/utils/: auth.py
