[project]
name = "ticketq-be-techincal-test"
version = "0.1.0"
description = "TicketQ - Simple Ticket Management API"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "flasgger>=0.9.7.1",
    "requests>=2.32.4",
]
